add support for jumbotron

--- a/static/login.html
+++ b/static/login.html
@@ -1,11 +1,23 @@
-login
-<p id="motd">MOTD</p>
-<p id="pong">ping</p>
-<hr>
-<li>u:<input id="u">
-<li>p:<input id="p">
-<li><button onclick="login()">login</button>
+<div>
+  <h3>login</h3>
+  <blockquote id="motd">MOTD</blockquote>
+  <p id="pong">ping</p>
+  <hr>
+  <li>u:<input id="u">
+  <li>p:<input id="p">
+  <li><button onclick="login()">login</button>
+</div>
+
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 <script src="cookie.js"></script>
 <script src="rpc.js"></script>
 <script src="login_app.js"></script>
