--- a/static/jumbo.html
+++ b/static/jumbo.html
@@ -57,10 +57,8 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h2>Hello, <span
-class="btn btn-default btn-md" type="button" role="button"
- id="access_token">t.unknown</span>!</h2>
-        <p id="motd">This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <h2>Hello, <span id="access_token" class="btn btn-default btn-md" type="button" role="button">unknown</span>!</h2>
+        <p id="motd">You should log in.  Then I'll give you a fortune.</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button" onclick="another_one();return false;">Get Another One &raquo;</a></p>
       </div>
     </div>
@@ -69,41 +67,55 @@ class="btn btn-default btn-md" type="button" role="button"
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-	  <small id="pong">logged out</small>
-          <h2>Heading</h2>
+	  <button onclick="logout()">log out</button>
+	  <small id="pong" class="text-warning">logged out</small>
+          <h2>Why?</h2>
+	  <p>Whether you like it or not, you're going to spend a lot of time wiring together web stuff.</p>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+	  <dl class="dl-horizontal">
+	    <dt>First of all...</dt>
+	    <dd>blah blah blah blah</dd>
+	    <dt>Secondly...</dt>
+	    <dd>xx blah blah blah blah xx</dd>
+	    <dt>Thirdly...</dt>
+	    <dd>blah rr blah blah blah</dd>
+	  </dl>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>Testimonials</h2>
+	  <blockquote>"What?  You made a website?"
+	    <footer><cite><abbr title="lover of vals">annebot</abbr></cite></footer></blockquote>
+	  <blockquote class="blockquote-reverse">"Well, it's really an async RPC framework..."
+	    <footer><cite><abbr title="lover of bots">val</abbr></cite></footer></blockquote>
+	  <blockquote>"Was that the sound of can opener?"
+	    <footer><cite><abbr title="lover of food">lex</abbr></cite></footer>
+	  </blockquote>
+	</div>
+        <div class="col-md-4" id="logx">
+          <h2>Log Messages</h2>
+          <p><a class="btn btn-default" href="#" role="button" onclick="unlog();return false;">Clear Log</a></p>
+          <div xclass="col-md-4" id="log"></div>
         </div>
       </div>
 
       <hr>
 
       <footer>
-        <p style='float:left'>
-<a href="x">Back to Top</a>
-&nbsp;</p>
-        <p style='float:right'>&copy <a href="ccl.io">ccl.io</a> 2015</p>
-	<p><center>Powered by <a href="sartre">Sarte</a></center></p>
+        <p style="float:left"  class="text-left"><a href="#">Back to Top</a></p>
+	<p style="float:right" class="text-right">&copy <a href="ccl.io">ccl.io</a> 2015</p>
+	<p class="text-center">Powered by <a href="sartre">Sarte</a></p>
       </footer>
-    </div> <!-- /container -->
 
+    </div> <!-- /container -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -- >
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
     <!-- -->
     <script src="cookie.js"></script>
