--- a/static/jumbo.html
+++ b/static/jumbo.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>Sartre's Fortune Cookie Jar</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
@@ -27,7 +27,7 @@
     <![endif]-->
   </head>
 
-  <body>
+  <body style='background: #F0F0F0'>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Sarte's Fortune Cookie Jar</a>
+          <a class="navbar-brand" href="#">Sartre's Fortune Cookie Jar</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right">
@@ -55,11 +55,17 @@
     </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+
+    <div class="jumbotron" style='background-image:url(lgrey031.jpg)'>
       <div class="container">
-        <h2>Hello, <span id="access_token" class="btn btn-default btn-md" type="button" role="button">unknown</span>!</h2>
-        <p id="motd">You should log in.  Then I'll give you a fortune.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button" onclick="another_one();return false;">Get Another One &raquo;</a></p>
+        <h1>Hello, <span id="access_token" class="btn btn-default btn-md" type="button" role="button">unknown</span>!</h1>
+	  <br>
+        <p id="motd">Sartre is an existentialist framework.  It doesn't tell you what to do; It just <em>is.</em>
+	  <br>
+	  <br>
+	  Log in and I'll tell you a fortune!
+	</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button" onclick="another_one();return false;">Get Another Fortune &raquo;</a></p>
       </div>
     </div>
 
@@ -70,8 +76,12 @@
 	  <button onclick="logout()">log out</button>
 	  <small id="pong" class="text-warning">logged out</small>
           <h2>Why?</h2>
-	  <p>Whether you like it or not, you're going to spend a lot of time wiring together web stuff.</p>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+	  <p>&nbsp;&nbsp;&nbsp;&nbsp;
+Sartre is an existentialist framework.  It doesn't tell you what to do; It just <em>is.</em></p>
+	  <p>&nbsp;&nbsp;&nbsp;&nbsp;
+Whether you like it or not, you're going to spend a lot of time wiring together web stuff.</p>
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;
+Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
 	  <dl class="dl-horizontal">
 	    <dt>First of all...</dt>
 	    <dd>blah blah blah blah</dd>
@@ -80,22 +90,91 @@
 	    <dt>Thirdly...</dt>
 	    <dd>blah rr blah blah blah</dd>
 	  </dl>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+
+<p>
+<em ondblclick="$('#filex').focus()">File:</em> ./authenticate/<b><span id="filex" contentEditable="true">wsgi_auth.py</span></b>
+<pre class="pre-scrollable" contentEditable="true">from prelude import *
+from auth_core import get_auth
+###
+def app(env, start_resp):
+    def encode(x): return json.dumps(x) + '\n'
+    from urlparse import parse_qs
+    def reply(code,msg,body=None):
+        start_resp(str(code)+' '+msg,headers)
+        return [ body or str(code)+' '+msg ]
+    headers=[('Content-Type', 'application/json'),
+             ('Access-Control-Allow-Origin', '*')]
+    path_info = env['PATH_INFO']
+    if (  path_info.startswith('/auth/grant/') or
+          path_info.startswith('/auth/valid/')  ):
+        env['QUERY_STRING'] = path_info[12:].replace('/','&')
+        path_info = env['PATH_INFO'] = path_info[:11]
+        pass
+    params = parse_qs(env['QUERY_STRING'])
+    ###
+    def grant():
+        code,stat=200,'OK'
+        u,p=params.get('u')[0],params.get('p')[0]
+        tok,username,info = get_auth().grant(u,p)
+        if not tok:  code,stat=401,'Unauthorized'
+        return reply(code,stat,encode(
+                dict(access_token=tok,
+                     username=username,
+                     authinfo=info)))
+    def valid():
+        t,g=params.get('t')[0],params.get('g')[0]
+        print "QQQQQ", repr((t,g))
+        if not get_auth().valid(t,g):
+            return reply(401,'Unauthorized',encode({"result":False}))
+        return reply(200,'OK',encode({"result":True}))
+    def info():
+        info = get_auth().info(params.get('t'))
+        if not info:
+            return reply(401,'Unauthorized',encode({}))
+        return reply(200,'OK',[encode(dict(
+                    result=dict(authinfo=info)))],encode({}))
+    def revoke():
+        get_auth().revoke(params.get('t')[0])
+        return reply(200,'OK',encode({}))
+    if path_info=='/auth/grant' : return grant ()
+    if path_info=='/auth/valid' : return valid ()
+    if path_info=='/auth/info'  : return info  ()
+    if path_info=='/auth/revoke': return revoke()
+    return reply(404,'Not Found',encode({}))
+from common import glaunch
+if __name__=='__main__':glaunch(app,7080,7443)
+</pre>
+</p>
+
+
+          <p>
+	    <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
+	    <a class="btn btn-default" disabled=true href="#" role="button">Save &raquo;</a>
+	  </p>
         </div>
-        <div class="col-md-4">
-          <h2>Testimonials</h2>
-	  <blockquote>"What?  You made a website?"
+        <div class="col-md-4" id="testimonials">
+          <h2>Testimonials
+            <a class="btn btn-default btn-sm" href="#" role="button" onclick="$('#testaments').html('');return false;">Clear</a>
+</h2>
+<div id="testaments">
+	  <blockquote>&ldquo;What?  You made a website?&rdquo;
 	    <footer><cite><abbr title="lover of vals">annebot</abbr></cite></footer></blockquote>
-	  <blockquote class="blockquote-reverse">"Well, it's really an async RPC framework..."
+	  <blockquote class="blockquote-reverse">&ldquo;Well, it's really an async RPC framework and all...&rdquo;
 	    <footer><cite><abbr title="lover of bots">val</abbr></cite></footer></blockquote>
-	  <blockquote>"Was that the sound of can opener?"
-	    <footer><cite><abbr title="lover of food">lex</abbr></cite></footer>
-	  </blockquote>
+	  <blockquote><span>&ldquo;Was that the sound of can opener?&rdquo;</span>
+	    <footer><cite><abbr title="infamous feline">lex</abbr></cite></footer></blockquote>
+	  <blockquote class="blockquote-reverse">&ldquo;No, lex&hellip;&rdquo; &laquo;shakes head&raquo;
+<p style="height: 0.25em">&nbsp;</p>
+&ldquo;So, it's like, really efficient.  And super-scalable.&rdquo;
+	    <footer><cite><abbr title="lover of bots">val</abbr></cite></footer></blockquote>
+
+</div>
+<button class="btn btn-primary" onclick="add_to_convo();return false;">Add to the conversation</button>
 	</div>
-        <div class="col-md-4" id="logx">
-          <h2>Log Messages</h2>
-          <p><a class="btn btn-default" href="#" role="button" onclick="unlog();return false;">Clear Log</a></p>
+        <div class="col-md-4">
+          <h2>Log Messages
+            <a class="btn btn-default btn-sm" href="#" role="button" onclick="unlog();return false;">Clear</a>
+</h2>
           <div xclass="col-md-4" id="log"></div>
         </div>
       </div>
@@ -105,7 +184,7 @@
       <footer>
         <p style="float:left"  class="text-left"><a href="#">Back to Top</a></p>
 	<p style="float:right" class="text-right">&copy <a href="ccl.io">ccl.io</a> 2015</p>
-	<p class="text-center">Powered by <a href="sartre">Sarte</a></p>
+	<p class="text-center">Powered by <a href="sartre">Sartre</a></p>
       </footer>
 
     </div> <!-- /container -->
@@ -118,8 +197,10 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
     <!-- -->
+    <script src="bootstrap-treeview.js"></script>
     <script src="cookie.js"></script>
     <script src="rpc.js"></script>
     <script src="login_app.js"></script>
+    <script>LOG("Page Loaded.")</script>
   </body>
 </html>
