make editor bigger

--- a/static/jumbo.html
+++ b/static/jumbo.html
@@ -12,6 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap-treeview.min.css">
 
     <!-- Custom styles for this template -->
     <link href="jumbotron.css" rel="stylesheet">
@@ -129,21 +130,18 @@ Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursu
 	  </ul>
 	  <div id="tree">Tree Not loaded.</div>
 	</div>
-	<div class="col-md-4">
+	<div class="col-md-8">
 
 	  <p>
 	    <em ondblclick="$('#filename').focus()">File: </em id="dirname">./authenticate<b>/<span id="filename" contentEditable="true">wsgi_auth.py</span></b>
 	    <pre class="pre-scrollable" contentEditable="true" id="filebuf">code here</pre>
 	  </p>
           <p>
-	    <a style="float:right" onclick="revertFile();return false;"class="btn btn-default" href="#" role="button">&laquo; Revert</a>
+	    <a style="float:right" onclick="revertFile();return false;" class="btn btn-default" href="#" role="button">&laquo; Revert</a>
 	    <a onclick="saveFile();return false;" id="save_button" class="btn btn-default" href="#" role="button">Save &raquo;</a>
 	  </p>
 
 
-	</div>
-	<div class="col-md-4">
-	  ccc
 	</div>
       </div>
     </div>
@@ -167,7 +165,7 @@ Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursu
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -- >
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
     <!-- -->
-    <script src="bootstrap-treeview.js"></script>
+    <script src="bootstrap-treeview.min.js"></script>
     <script src="cookie.js"></script>
     <script src="rpc.js"></script>
     <script src="login_app.js"></script>
