start adding db backend

--- a/static/examples/todo/index.html
+++ b/static/examples/todo/index.html
@@ -16,4 +16,5 @@
 <button onclick="console.log(ToDo.$$Complete('#i1001'))">log</button>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js"></script>
 <script src="u.js"></script>
+<script src="../../rpc.js"></script>
 <script src="app.js"></script>
