--- a/static/index.html
+++ b/static/index.html
@@ -1,9 +1,7 @@
 <h1>static index page</h1>
-
 <hr>
-
 <li><a href="readme.html">README</a></li>
 <li><a href="/test">test</a></li>
-<li><a href="examples/fortune/index.html">fortune</a></li>
-
+<li><a href="main.html">main</a></li>
+<li><a href="examples/index.html">examples</a></li>
 <hr>
