change rpc call

--- a/static/examples/fortune/index.html
+++ b/static/examples/fortune/index.html
@@ -56,12 +56,12 @@
       <div class="container">
         <h1>Hello, <span id="access_token" class="btn btn-default btn-md" type="button" role="button">unknown</span>!</h1>
 	  <br>
-        <p id="motd">Sartre is an existentialist framework.  It doesn't tell you what to do; It just <em>is.</em>
+        <p id="fortune">Sartre is an existentialist framework.  It doesn't tell you what to do; It just <em>is.</em>
 	  <br>
 	  <br>
 	  Log in and I'll tell you a fortune!
 	</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button" onclick="another_one();return false;">Get Another Fortune &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button" onclick="fortune();return false;">Get Another Fortune &raquo;</a></p>
       </div>
     </div>
 
@@ -115,8 +115,7 @@ Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursu
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -- >
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
     <!-- -->
-    <script src="cookie.js"></script>
-    <script src="rpc.js"></script>
+    <script src="sartre.js"></script>
     <script src="app.js"></script>
     <script>LOG("Page Loaded2.")</script>
   </body>
