add testimonial app stub

--- a/static/examples/index.html
+++ b/static/examples/index.html
@@ -1,4 +1,7 @@
 <h3>Examples</h3>
-<li><a href="fortune/index.html">fortune</a></li>
-<li><a href="editor/index.html">editor</a></li>
-<li><a href="todo/index.html">todo</a></li>
+<ul>
+  <li><a href="fortune/index.html">fortune</a></li>
+  <li><a href="editor/index.html">editor</a></li>
+  <li><a href="testamonials/index.html">testamonials</a></li>
+  <li><a href="todo/index.html">todo</a></li>
+</ul>
