move resources around

--- a/static/examples/editor/index.html
+++ b/static/examples/editor/index.html
@@ -12,10 +12,10 @@
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bootstrap-treeview.min.css">
+    <link rel="stylesheet" href="../../css/bootstrap-treeview.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="style.css" rel="stylesheet">
+    <link href="../../css/jumbotron.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -120,8 +120,8 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -- >
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
     <!-- -->
-    <script src="bootstrap-treeview.min.js"></script>
-    <script src="sartre.js"></script>
+    <script src="../../js/bootstrap-treeview.min.js"></script>
+    <script src="../../js/sartre.js"></script>
     <script src="app.js"></script>
     <script>LOG("Page Loaded2.")</script>
   </body>
