--- a/static/examples/fortune/index.html
+++ b/static/examples/fortune/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="style.css" rel="stylesheet">
+    <link href="../../jumbotron.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -52,7 +52,7 @@
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
 
-    <div class="jumbotron" style='background-image:url(lgrey031.jpg)'>
+    <div class="jumbotron" style='background-image:url(../../images/lgrey031.jpg)'>
       <div class="container">
         <h1>Hello, <span id="access_token" class="btn btn-default btn-md" type="button" role="button">unknown</span>!</h1>
 	  <br>
@@ -115,7 +115,7 @@ Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursu
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -- >
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
     <!-- -->
-    <script src="sartre.js"></script>
+    <script src="../../js/sartre.js"></script>
     <script src="app.js"></script>
     <script>LOG("Page Loaded2.")</script>
   </body>
