--- a/static/examples/testamonials/index.html
+++ b/static/examples/testamonials/index.html
@@ -52,7 +52,7 @@
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
 
-    <div class="jumbotron" style='background-image:url(lgrey031.jpg)'>
+    <div class="jumbotron" style='background-image:url(../../images/lgrey031.jpg)'>
       <div class="container">
         <h1>Hello, <span id="access_token" class="btn btn-default btn-md" type="button" role="button">unknown</span>!</h1>
 	  <br>
