change some titles

--- a/static/examples/editor/index.html
+++ b/static/examples/editor/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Sartre's Fortune Cookie Jar</title>
+    <title>Sartre's Editor</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
