fix editor save bug

--- a/static/examples/testamonials/index.html
+++ b/static/examples/testamonials/index.html
@@ -111,7 +111,7 @@ Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursu
 
     <hr>
 
-    <div class="jumbotron" style='background-image:url(lgrey031.jpg)'>
+    <div class="jumbotron" style='background-image:url(../../images/lgrey031.jpg)'>
       <div class="container">
         <h1>Hello again, <span id="access_token2" class="btn btn-default btn-md" type="button" role="button">unknown</span>!</h1>
         <p>Want to try to edit some stuff?</p>
