--- a/static/examples/editor/index.html
+++ b/static/examples/editor/index.html
@@ -53,7 +53,7 @@
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
 
-    <div class="jumbotron" style='background-image:url(lgrey031.jpg)'>
+    <div class="jumbotron" style='background-image:url(../../images/lgrey031.jpg)'>
       <div class="container">
         <h1>Hello, <span id="access_token" class="btn btn-default btn-md" type="button" role="button">unknown</span>!</h1>
 
@@ -71,7 +71,7 @@
 
         <div class="col-md-9">
 	  <p>
-	    <em ondblclick="$('#filename').focus()">File: </em id="dirname">./authenticate<b>/<span id="filename" contentEditable="true">wsgi_auth.py</span></b>
+	    <em ondblclick="$('#filename').focus()">File: </em><b id="dirname">./authenticate</b>/<span id="filename" contentEditable="true">wsgi_auth.py</span>
 	    <pre class="pre-scrollable" contentEditable="true" id="filebuf">code here</pre>
 	  </p>
           <p>
