--- a/static/examples/testamonials/index.html
+++ b/static/examples/testamonials/index.html
@@ -8,10 +8,11 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Sartre's Testamonials</title>
+    <title>Sartre's Fortune Cookie Jar</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/bootstrap-treeview.min.css">
 
     <!-- Custom styles for this template -->
     <link href="../../css/jumbotron.css" rel="stylesheet">
@@ -56,12 +57,11 @@
       <div class="container">
         <h1>Hello, <span id="access_token" class="btn btn-default btn-md" type="button" role="button">unknown</span>!</h1>
 	  <br>
-        <p id="motd">Sartre is an existentialist framework.  It doesn't tell you what to do; It just <em>is.</em>
+        <p id="fortune">Sartre is an existentialist framework.  It doesn't tell you what to do; It just <em>is.</em>
 	  <br>
 	  <br>
-	  Log in and I'll tell you a fortune!
+	  Log in and you can make your own testimonial!
 	</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button" onclick="another_one();return false;">Get Another Fortune &raquo;</a></p>
       </div>
     </div>
 
@@ -111,41 +111,6 @@ Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursu
 
     <hr>
 
-    <div class="jumbotron" style='background-image:url(../../images/lgrey031.jpg)'>
-      <div class="container">
-        <h1>Hello again, <span id="access_token2" class="btn btn-default btn-md" type="button" role="button">unknown</span>!</h1>
-        <p>Want to try to edit some stuff?</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button" onclick="another_one();return false;">Get Another Fortune &raquo;</a></p>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-	<div class="col-md-4">
-	  <ul class="nav nav-pills">
-	    <li role="presentation" class="active"><a href="#">Files</a></li>
-	    <li role="presentation"><a href="#">Buffers</a></li>
-	    <li role="presentation"><a href="#">Procs</a></li>
-	  </ul>
-	</div>
-	<div class="col-md-8">
-
-	  <p>
-	    <em ondblclick="$('#filename').focus()">File: </em id="dirname">./authenticate<b>/<span id="filename" contentEditable="true">wsgi_auth.py</span></b>
-	    <pre class="pre-scrollable" contentEditable="true" id="filebuf">code here</pre>
-	  </p>
-          <p>
-	    <a style="float:right" onclick="revertFile();return false;" class="btn btn-default" href="#" role="button">&laquo; Revert</a>
-	    <a onclick="saveFile();return false;" id="save_button" class="btn btn-default" href="#" role="button">Save &raquo;</a>
-	  </p>
-
-
-	</div>
-      </div>
-    </div>
-
-    <hr>
-
     <div class="container">
       <footer>
         <p style="float:left"  class="text-left"><a href="#">Back to Top</a></p>
@@ -163,7 +128,8 @@ Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursu
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -- >
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
     <!-- -->
-    <script src="../../sartre.js"></script>
+    <script src="../../js/bootstrap-treeview.min.js"></script>
+    <script src="../../js/sartre.js"></script>
     <script src="app.js"></script>
     <script>LOG("Page Loaded2.")</script>
   </body>
