--- a/static/examples/testamonials/index.html
+++ b/static/examples/testamonials/index.html
@@ -98,7 +98,8 @@ Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursu
 	    <footer><cite><abbr title="lover of bots">val</abbr></cite></footer></blockquote>
 
 	  </div>
-	  <button class="btn btn-primary" onclick="add_to_convo();return false;">Add to the conversation</button>
+
+	  <button id="add_to" class="btn btn-primary" onclick="add_to_convo();return false;">Add to the conversation</button>
 	</div>
         <div class="col-md-4">
           <h2>Log Messages
