--- a/static/examples/testamonials/index.html
+++ b/static/examples/testamonials/index.html
@@ -140,7 +140,7 @@ Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursu
     <script src="app.js"></script>
     <script>
     LOG("Page Loaded.");
-    var tApp=new tApplication().launch();
+    var tApp=tApplication().launch();
     LOG("App Launched.");
     </script>
     </body>
