--- a/static/examples/todo/index.html
+++ b/static/examples/todo/index.html
@@ -1,4 +1,14 @@
 <style>input, select, textarea, button{font-family:inherit;}</style>
+
+<script id="todo_item0" type="hbs">
+<p id="{{id}}">
+<input name="value" placeholder="Enter description here..."
+  onchange="TDL.Update('Description','{{id}}',this.value);return true">
+<input type="checkbox" name="complete"
+  onchange="TDL.Update('Complete','{{id}}',this.checked)">
+<a href="#" onclick="TDL.Delete('{{id}}');return false">delete</a>
+</p></script>
+
 <script id="todo_item"  type="hbs">
 <p id="{{id}}">
 <input name="value"
@@ -10,48 +20,17 @@
   onclick="ToDo.Delete('#{{id}}');return false">delete</a>
 </p></script>
 
-<ul id="todolist"></ul>
-<button onclick="ToDo.Create(nextId())">Create</button>
-<button onclick="console.log(ToDo.$$Description('#i1001'))">log</button>
-<button onclick="console.log(ToDo.$$Complete('#i1001'))">log</button>
+<ul id="todolist0"></ul>
+<button onclick="TDL.Create(nextId())">Create</button>
+
+<hr>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js"></script>
 <script src="u.js"></script>
-<script src="../../rpc.js"></script>
-<script src="app.js"></script>
+<script src="models/model.js"></script>
+<script src="models/server.js"></script>
+<script src="models/dom.js"></script>
+<script src="models/app.js"></script>
 <script>
-    function TodoApplication(){
-        var self={};
-        self.$$Description=function(k,v){            
-            console.log("$$Description"+k+v);
-            var elt=$E(k+'>[name="value"]');
-            if (U(v))	  return(elt.value);
-            elt.value = v;
-            //PUB.Update({id:id,description:desc});
-        };
-        self.$$Complete=function(k,v){
-            console.log("$$Complete"+k+v);
-            var elt = $E(k+'>[name="complete"]');
-            if (U(v))   return(elt.checked);
-            var elt2= $E(k+'>[name="value"]');
-            elt.checked = complete ? true : false;
-            elt2.style['text-decoration']=v?"line-through":"";
-            //PUB.Update({id:id,complete:complete});
-        };
-        self.Create=function(k){
-            console.log("Create " + k);
-            var newElt=document.createElement('li');
-            var newId=k?k:nextId();
-            renderElt('todo_item', newElt, {id: newId});
-            this.arrElt.appendChild(newElt);
-            //PUB.Create({id:id});        
-        };
-        self.Delete=function(k){
-            console.log("Delete " + k);
-            var elt = $E(k);
-            var node = elt.parentNode;
-            node.parentNode.removeChild(node);
-            //PUB.Delete({id:id});
-        };
-        return self;
-    }
+var TDL = TDL_App("#todolist0");
 </script>
